--- a/doc/2.analisis.md
+++ b/doc/2.analisis.md
@@ -1,11 +1,19 @@
 # Análisis de Funcionalidades
 
-En esta sección, se destacan las funciones y características esenciales que el sistema debe incorporar. Estas funcionalidades juegan un papel fundamental para alcanzar los objetivos del proyecto.
+- Manejar cuentas personales.
+- Manejar tareas.
+- Manejar Guardado en la nube.
 
 ## Retos
 
-En este apartado, se identifican los desafíos y obstáculos que pueden surgir durante el desarrollo o implementación del sistema. Estos retos son críticos para comprender y abordar en la planificación y ejecución del proyecto.
+- La prinicpal desventaja y reto es aprender una nueva tecnología de desarrollo de aplicaicones en Android.
+- Estructuracón de datos guardados y mostrados al usuario
+- Definición de una estructura fácil de implementar, mantener y actualizar
 
 ## Mejoras Futuras
 
-En esta sección, se exploran las oportunidades de mejora que se pueden considerar a medida que el sistema evoluciona. Se presentan posibles mejoras y desarrollos futuros que podrían aumentar la eficacia o la utilidad del sistema con el tiempo.
+- Añadir guardado y sincronización local.
+- Implementar inicio de Sesión y Registro con proveedores Autorizados com Google o Github
+- Siguimiento de la productividad del usuario.
+- Implementación de tareas compartidas
+- Rediseño de la interfaz
