--- a/doc/3.disenho.md
+++ b/doc/3.disenho.md
@@ -1,7 +1,52 @@
-# Diseño 
+# Diseño
 
 Funciones y características clave que el sistema debe incluir. Estas funcionalidades son esenciales para cumplir con los objetivos del proyecto.
 
-## Navegación 
+## Navegación
 
-Se adjuntará un esquema de mockup’s de las diferentes pantallas, la navegación y los datos intercambiados entre ellas
+> - MainRouter
+>
+> ![Main Router](./src/MainRouter.png)
+>
+> - AuthRouter
+>
+> ![AuthRouter](./src/AuthRouter.png)
+>
+> - BottomRouter
+>
+> ![BottomRouter](./src/BottomRouter.png)
+>
+> - TaskRouter
+>
+> ![TaskRouter](./src/TaskRouter.png)
+
+## ViewModels
+
+> - AuthViewModel
+>
+> ![AuthViewModel](./src/AuthViewModel.png)
+>
+> - LoginViewModel
+>
+> ![LoginViewModel](./src/LoginViewModel.png)
+>
+> - SignUpViewModel
+>
+> ![SignUpViewModel](./src/SignUpViewModel.png)
+>
+> - SharedTaskViewModel
+>
+> ![SharedTaskViewModel](./src/SharedTaskViewModel.png)
+>
+> - ProfileViewModel
+>
+> ![ProfileViewModel](./src/ProfileViewModel.png)
+>
+> - CreateTaskViewModel
+>
+> ![CreateTaskViewModel](./src/CreateTaskViewModel.png)
+>
+> - DetailTaskViewModel
+>
+> ![DetailTaskViewModel](./src/DetailTaskViewModel.png)
+>
